Ticket #51: Added some zIndex juggling to make sure the main menu get in front of the iframes and at the same time behind the wizzard disabler box.

--- a/settings/style.css
+++ b/settings/style.css
@@ -286,7 +286,7 @@ p {
   cursor: pointer;
   border-collapse: collapse;
   border: 0px solid black;
-  z-index: 1;
+  z-index: 12;
 }
 
 .menuitem .dropdown{
